Fix for stupid Firefox - keep eyes on how visibility:hidden instead of display:none hurts performance

--- a/inst/www/css/style.css
+++ b/inst/www/css/style.css
@@ -152,7 +152,7 @@ hr {
 	background-color: whitesmoke;
 }
 	.tabpane:not(.active) {
-		display: none;
+		visibility: hidden;
 	}
 	.tabpane.Row {
 		top: 40px;
